Fix: Resolve backend rate limiting issue blocking Kubernetes health checks
- Exclude /api/health endpoint from rate limiting to prevent 429 errors
- Add Ollama init container for automatic llama2 model download
- Add REACT_APP_API_URL environment variable for frontend-backend communication
- Fixes network errors when generating graphs in Kubernetes deployment

--- a/k8s/deployments-multi-node.yaml
+++ b/k8s/deployments-multi-node.yaml
@@ -27,6 +27,9 @@ spec:
         imagePullPolicy: Never
         ports:
         - containerPort: 80
+        env:
+        - name: REACT_APP_API_URL
+          value: "http://backend:5000"
         resources:
           requests:
             memory: "64Mi"
@@ -189,6 +192,20 @@ spec:
       # Schedule on AI/ML compute node
       nodeSelector:
         workload-type: compute
+      # Download llama2 model before starting main container
+      initContainers:
+      - name: model-downloader
+        image: ollama/ollama:latest
+        command: ["/bin/sh", "-c"]
+        args:
+        - |
+          ollama serve &
+          sleep 10
+          ollama pull llama2
+          pkill ollama
+        volumeMounts:
+        - name: ollama-data
+          mountPath: /root/.ollama
       # Prefer different node than python-service if possible
       affinity:
         podAntiAffinity:
