--- a/k8s/deployments-multi-node.yaml
+++ b/k8s/deployments-multi-node.yaml
@@ -229,10 +229,10 @@ spec:
           value: "0.0.0.0:11434"
         resources:
           requests:
-            memory: "1Gi"
+            memory: "4Gi"
             cpu: "500m"
           limits:
-            memory: "2Gi"
+            memory: "6Gi"
             cpu: "1000m"
         volumeMounts:
         - name: ollama-data
@@ -242,11 +242,13 @@ spec:
             command: ["ollama", "list"]
           initialDelaySeconds: 120
           periodSeconds: 30
+          timeoutSeconds: 10
         readinessProbe:
           exec:
             command: ["ollama", "list"]
           initialDelaySeconds: 60
           periodSeconds: 15
+          timeoutSeconds: 10
       volumes:
       - name: ollama-data
         emptyDir: {}
